--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   sqflite: ^2.0.0+4
   path_provider: ^2.0.2
   flutter_svg: ^0.22.0
+  persian_fonts: ^1.0.4
 
 dev_dependencies:
   flutter_test:
